--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,8 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width={device-width}, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body>
-    {{{body}}}
+    <div class="container">
+        <div class="row">
+            <header>
+                <div class="col">
+                <h1>
+                    <a href="/">Social News</a>
+                </h1>
+                </div>
+                <div class="col">
+                <nav>
+                    <button id="logout" class="btn-no-style">logout</button>
+                    <a href="/login">login</a>
+                </nav>
+
+            </header>
+        </div>
+        <div class="row">
+            <main>
+                {{{body}}}
+            </main>
+        </div>
+        <div class="row">
+            <footer>
+                
+            </footer>
+        </div>
+    </div>
+    <script src="/javascript/logout.js"></script>
 </body>
 </html>
