--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,40 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width={device-width}, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-</head>
-<body>
-    <div class="container">
-        <div class="row">
-            <header>
-                <div class="col">
-                <h1>
-                    <a href="/">Social News</a>
-                </h1>
-                </div>
-                <div class="col">
-                <nav>
-                    <button id="logout" class="btn-no-style">logout</button>
-                    <a href="/login">login</a>
-                </nav>
 
-            </header>
-        </div>
-        <div class="row">
-            <main>
-                {{{body}}}
-            </main>
-        </div>
-        <div class="row">
-            <footer>
-                
-            </footer>
-        </div>
-    </div>
-    <script src="/javascript/logout.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>For Minimalists News Site</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"></head>
+
+<body>
+  <div class="container">
+    <header>
+      <h1>
+        <a href="/">For Minimalists News Site</a>
+      </h1>
+      <nav>
+        {{#if loggedIn}}
+        <a href="/dashboard" class="btn btn-primary">dashboard</a>
+        <button id="logout" class="btn btn-secondary">logout</button>
+        {{else}}
+        <a href="/login" class="btn btn-primary">login</a>
+        {{/if}}
+      </nav>
+    </header>
+    <main>
+      {{{ body }}}
+    </main>
+    <footer>
+      Thanks for visiting!
+    </footer>
+  </div>
+  
+  {{#if loggedIn}}
+  <script src="/javascript/logout.js"></script>
+  {{/if}}
 </body>
+
 </html>
